--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
@@ -21,7 +22,8 @@
     "react-vertical-timeline-component": "^3.6.0",
     "swiper": "^10.3.0",
     "TagCloud": "^2.3.2",
-    "three": "^0.149.0"
+    "three": "^0.149.0",
+    "vercel": "^32.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
